compiler/tests/err-assign-const.err.expect
tests/err-assign-const.c:4:5: error: assignment to 'const' variable 'K'
