compiler/tests/err-assign-const.c
const int K = 10;

int main() {
    K = 20;
    return K;
}
